# capstone-stock

./: .gitignore
backend/: Dockerfile  nasdaq100_symbols.txt  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/crud/: crud_price.py  crud_stock.py
backend/app/db/: database.py
backend/app/events/: lifespan.py
backend/app/models/: stock_model.py
backend/app/routers/: stocks.py
backend/app/schemas/: stock_schema.py
backend/app/services/: data_fetcher.py  stock_service.py
backend/app/twelvedata_docs/: Quote.md
frontend/: Dockerfile  index.html  package-lock.json
frontend/src/: App.jsx
frontend/src/components/: StockList.jsx
